Finalizando aplicações de design pattern ;

--- a/API/curso/curso.api/curso.api.csproj
+++ b/API/curso/curso.api/curso.api.csproj
@@ -30,6 +30,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <None Include="..\.editorconfig" Link=".editorconfig" />
     <None Include="bin\Debug\netcoreapp3.1\curso.api.dll" />
     <None Include="bin\Debug\netcoreapp3.1\curso.api.exe" />
     <None Include="bin\Debug\netcoreapp3.1\curso.api.pdb" />
